# asym-trade-agent

./: .gitignore  50X_LEVERAGE_EXECUTION_GUIDE.md  ACTUAL_EXECUTION_PIPELINE.md  AGGRESSIVE_COMPOUNDING_SYSTEM.md  AI_PROVIDER_GUIDE.md  ALL_ERRORS_FIXED.md  ANALYSIS_COMPLETE_TRADING_SYSTEM_FAILURE_AND_RECOVERY.md  AR_MODEL_IMPLEMENTATION_STATUS.md  BUG_REPORT_SILENT_EXECUTION_BLOCKERS.md  CALCULUS_FORECAST_FIX.md  CMakeLists.txt  CODE_ORGANIZATION_GUIDE.md  COMPLETE_SYSTEM_UPGRADE.md  CONSISTENCY_FIXES.md  CRITICAL_BUGS_FOUND.md  DEEPSEEK_COMPREHENSIVE_ANALYSIS.md  DEFENSIVE_FALLBACK_VERIFICATION.md  DELETE_AND_REBUILD_PLAN.md  ENHANCED_TERMINAL_LOGGING.md  EXECUTION_COST_RESTORATION.md  EXPECTED_VALUE_ANALYSIS.md  FEE_HEMORRHAGE_FIX.md  FERRARI_SYSTEM_COMPLETE.md  FINAL_AUDIT_COMPLETE.md  FINAL_SYSTEM_STATUS.md  FINAL_VELOCITY_FIX.md  FIXES_SUMMARY.md  GEMINI.md  GLM_API_INFO.md  HYBRID_CONSENSUS_FIX.md  INSTITUTIONAL_RISK_ARCHITECTURE_SUMMARY.md  MATHEMATICAL_AUDIT.md  MATHEMATICAL_RECONSTRUCTION.md  MATHEMATICAL_UPGRADES_COMPLETE.md  MATH_AUDIT.md  MINIMUM_ORDER_FIX.md  MULTI_TIMEFRAME_IMPLEMENTATION.md  NEUTRAL_SIGNAL_DIAGNOSIS.md  NEUTRAL_SIGNAL_FIX.md  NONETYPE_COMPLETE_FIX.md  (+164 more)
.claude/agents/: README.md  algorithmic-trading-tester.md  calculus-finance-mathematician.md  crypto-data-engineer.md  crypto-market-monitor.md  crypto-performance-optimizer.md  crypto-security-auditor.md  crypto-trading-signal-analyst.md  deepseek-integration-specialist.md  enterprise-code-quality-specialist.md  institutional-software-architect.md  quantitative-finance-analyst.md  technical-strategist-planner.md  trading-risk-manager.md
archive/: backtester.py  live_portfolio_trader.py  test_ar_model.py
backup/: calculus_strategy.py  cpp_bridge_working.py  custom_http_manager.py  live_calculus_trader.py  risk_manager.py  signal_coordinator.py
cpp/: CMakeLists.txt  ar_model.cpp  ar_model.h  bindings.cpp  kalman_filter.cpp  kalman_filter.h  libmathcore.dylib  market_maker.cpp  market_maker.h  math_core.c  math_core.cpp  math_core.h  math_core_fixed.cpp  missing_headers.cpp  order_book.cpp  order_book.h  portfolio_opt.cpp  portfolio_opt.h  risk_kernels.cpp  risk_kernels.h  sharpe_tracker.cpp  sharpe_tracker.h  websocket_client.cpp  websocket_client.h
cpp_bridge/: __init__.py
scripts/: build_enhanced.sh  build_math_core.sh  build_simple.sh  collect_trade_history.py
src/: __init__.py  main.py
tests/: test_crypto_ev_adjustments.py  test_math_forecasting_utils.py
utils/: math_forecasting_utils.py
